# dvsa-api

./: .env.example  Dockerfile.txt  LICENSE  ONBOARDING.md  README.md  docker-compose.yml  manage.py  project-structure.txt  pytest.ini
.github/workflows/: ci-databricks.yml  ci.yml
apps/analytics/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/observability/: README.md  __init__.py  admin.py  agents.py  (+13 more)
config/: __init__.py  asgi.py  celery.py  urls.py  urls_api.py  wsgi.py
core/: exceptions.py  pagination.py  permissions.py
custom_model/: README.md  __init__.py  azure_customvision_helper.py  label_map.json.example  model_loader.py  onnx_inference.py  requirements.txt
custom_models/: README.md  __init__.py  loader.py  models_catalog.json  postprocess.py  registry.py  requirements.txt  selector.py
docs/: databricks_integration.md
dvsa_databricks_connector/: README.md  __init__.py  client.py  config.py  connector.py  mlflow_utils.py  pyproject.toml  streaming.py
dvsa_databricks_connector/cluster-init/: install_dvsa_connector.sh
jobs/: job_template.json
requirements/: base.txt  databricks-dev.txt  dev.txt
scripts/: dbx_local_run.py
solution-accelerator/: foundry.tf  main.tf  storage.tf  variables.tf
tests/: test_adapters.py  test_azure_env.py  test_custom_model_integration.py  test_custom_model_wiring.py  test_loader.py  test_observability.py  test_observability_agents.py  test_observability_api.py  test_observability_otel.py  test_onnx_inference_preprocessing.py  test_routines.py  test_selector.py  test_users.py
(+76 files in other folders)
